<resources>
    <string name="app_name">Group40</string>
    <string name="hello_world">Hello World! This is Group 40 :)</string>
    <string name="a6_btn_str">A6</string>
    <string name="a8_str">A8</string>
    <string name="about_str">About</string>
    <string name="about_content_str">     Group40 \n\n Team members:\n - Ruihan Ding\n - Zhehao Xu\n - Chuyang Chen\n - Tingting Jiang </string>
    <string name="about_us">About Us</string>
    <string name="input_password">Input password</string>
    <string name="sign_up">Go to sign up</string>
    <string name="log_in">Log In</string>
    <string name="input_email">Input Email</string>
    <string name="sign_up_button">sign up</string>
    <string name="go_to_log_in">go to log in</string>
    <string name="next"> Next </string>
    <string name="choose_a_friend"> Choose a friend </string>
    <string name="the_icon_of_the_friend">friend icon </string>
    <string name="june_10">June-10</string>
    <string name="mike_mickey">Mike Tom</string>
    <string name="_10_00">09:59</string>
    <string name="textview">name</string>
    <string name="send">Send</string>
    <string name="more">Sticker Details</string>
    <string name="ok">OK</string>
    <string name="details_of_the_stickers_you_sent_n">Stickers you sent:</string>
    <string name="sign_up_title">Sign up</string>
    <string name="log_in_title">Log In</string>
    <string name="name">Name:</string>
    <string name="jack">Jack</string>
    <string name="email">Email:</string>
    <string name="stark">Stark</string>
    <string name="project">Project</string>
    <string name="car_type">Car Type</string>
    <string name="start_date_none"><u>Start Date: None</u></string>
    <string name="select">Select</string>
    <string name="end_date_none"><u>End Date: None</u></string>
    <string name="search_activity">Search Activity</string>
    <string name="brand_title">Brand:</string>
    <string name="model_title">Model:</string>
    <string name="availability">Availability:</string>
    <string name="location_city">Location:</string>
    <string name="input_the_city">Input the city</string>
    <string name="search">SEARCH</string>
    <string name="_9_7miles">9.7miles</string>
    <string name="color">color</string>
    <string name="add_a_vehicle">Add A Vehicle</string>
    <string name="submit_str">submit</string>
    <string name="choose_color">Choose Color</string>
    <string name="choose_body_style">Choose body style</string>
    <string name="choose_brand">Choose brand</string>
    <string name="choose_model">Choose model</string>
    <string name="input_street">Street</string>
    <string name="zip_code">Zip code</string>
    <string name="city">City</string>
    <string name="choose_mileage">Choose mileage</string>
    <string name="state">State</string>
    <string name="choose_capacity">Choose capacity</string>
    <string name="choose_fuel">Choose fuel</string>
    <string name="description_here_ndescription_here_ndescription_here_ndescription_here_ndescription_here_ndescription_here_ndescription_here_ndescription_here_ndescription_here_ndescription_here_ndescription_here_ndescription_here_ndescription_here_ndescription_here_ndescription_here_ndescription_here_ndescription_here_ndescription_here_ndescription_here_ndescription_here_ndescription_here_n">description here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\ndescription here\n</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="_2023_lexus">2023 Lexus</string>
    <string name="input_vehicle_title">Input Vehicle Title</string>
    <string name="input_price_in_usd_per_day">Input price</string>
    <string name="per_day">$ per day</string>
    <string name="upload_car_image">upload car image</string>
    <string name="place_order">Place Order</string>
    <string name="price_low_to_high">$ - $$$</string>
    <string name="less_mileage">less mileage</string>
    <string name="highly_reviewed">highly reviewed</string>
    <string name="near">near me</string>
    <string name="est_total_includes_taxes_and_fees">Est Total (includes taxes and fees):</string>
    <string name="search_the_vehicle">Search the vehicle</string>
    <string name="google_maps_API_key">AIzaSyB0xVMOtkpPW_4UwVdhLx8HFzZmRxChcrs</string>
    <string name="locate">LOCATE</string>
    <string name="location_access_denied">Location access denied</string>
    <string name="process">Process</string>
    <string name="exit">Exit</string>
    <string name="_500">500$</string>
    <string name="all_price">All price:</string>
    <string name="_10">10</string>
    <string name="all_days">All days:</string>
    <string name="current_balance">Current balance:</string>
    <string name="checkout">Checkout</string>
    <string name="price_per_day">Price(per day):</string>
    <string name="_50">50$</string>
    <string name="_10_6_2022">10/6/2022</string>
    <string name="end_date">End date:</string>
    <string name="_10_01_2022">10/01/2022</string>
    <string name="start_date">Start date:</string>
    <string name="camry">CAMRY</string>
    <string name="model">Model:</string>
    <string name="toyota">TOYOTA</string>
    <string name="brand">Brand:</string>
    <string name="order_details">Order Details</string>
    <string name="_5000">5000$</string>
    <string name="my_Orders">My Orders</string>
    <string name="rate">Rate</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="rate_this_order">Rate this order</string>
    <string name="detail">Detail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orderid_123">orderId: 123</string>
    <string name="rent_again">Rent Again</string>
    <string name="seems_like_you_are_new_to_rent_a_car">Seems like you are new, to rent a car</string>
    <string name="no_cars_available_now_try_to_change_some_settings">No cars available now, try to change some settings</string>
    <string name="rent_a_car">Rent a car</string>
    <string name="orders">orders</string>
    <string name="add_vehicle">Add vehicle</string>
    <string name="profile">Profile</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
</resources>