<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/start_date"
        android:layout_width="215dp"
        android:layout_height="31dp"
        android:layout_margin="8dp"
        android:text="@string/start_date_none"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/end_date"
        app:layout_constraintEnd_toStartOf="@id/start_date_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_date_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/end_date"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toEndOf="@id/start_date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/end_date"
        android:layout_width="210dp"
        android:layout_height="29dp"
        android:text="@string/end_date_none"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/end_date_btn"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_date" />

    <Button
        android:id="@+id/end_date_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/end_date"
        app:layout_constraintTop_toBottomOf="@id/start_date" />

</androidx.constraintlayout.widget.ConstraintLayout>